Fix overlapping text in LettersSpinner

--- a/src/app/components/LettersSpinner.module.scss
+++ b/src/app/components/LettersSpinner.module.scss
@@ -16,6 +16,10 @@
         opacity: 0;
     }
 
+    &[data-hidden] {
+        visibility: hidden;
+    }
+
     &[data-fadeout] > span {
         @include animate('0.5s forwards') {
             from {
